# magic_codec

./: .flake8  .gitignore  LICENSE  README.md  after.py  magic_codec.pth  pyproject.toml  requirements_dev.txt  setup.py
example/: pyproject.toml  requirements.txt  setup.cfg  test.py
example/src/magic_example/: __init__.py  extension.py
src/magic_codec/: codec.py  register.py  util.py
src/magic_codec/builtin/: braces.py  cpp.py  incdec.py  macro.py  toml.py
tests/: test.cpp  test_dummy.py
tests/braces/: test.by
tests/incdec/: incdec.py  test_incdec.py
tests/macro/: constants.py  import.py  invalid.py  keywords.py  mixed.py  one_more.py  remote.py  syntax.py  tokens.py  user_input.py
tests/macro/unittest/: test_bangs.py  test_macro_function.py  test_macro_keyword.py
tests/toml/: data_invalid.toml  data_valid.toml  schema.json
tests/util/: test_peekablestream.py  test_token.py  test_tokenstream.py
