[metadata]
name = magic_example
version = 0.1

description = Example extension for magic_codec
long_description = file: README.md
url = https://github.com/tsche/magic_coddec
project_urls =
    Bug Tracker = https://github.com/tsche/magic_coddec/issues

author = Tsche
author_email= contact@palliate.io

license = MIT
license_files = LICENSE

platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
zip_safe = False
include_package_data = True

[options.packages.find]
where=src

[options.package_data]
* = 
    py.typed

[flake8]
extend-ignore = D1, D2, E1, E2, E3, E501, W1, W2, W3, W5
